--- a/src/Componentes/UI/Acordeon.css
+++ b/src/Componentes/UI/Acordeon.css
@@ -1,25 +1,20 @@
 .acordeon {
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25) !important ;
+  background-color: #383333 !important ;
+  margin: 2rem ;
   display: flex;
-  flex-wrap: wrap !important;
-  justify-content: center !important; 
+  justify-content: center;
   align-items: center;
-  align-content: center;
-  flex: auto;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25) !important;
-  background-color: #383333 !important;
-  margin: 1rem !important;
-  width:fit-content;
+  flex-wrap: wrap;
 }
 
 .acordeon__texto {
   padding: 0.3rem 2rem;
   font-size: 1.2rem !important;
-  flex: 1 !important;
   margin: 0 1rem !important;
   color: white !important;
   text-align: center !important;
   text-transform: uppercase;
   font-family: "Roboto", Arial, sans-serif !important;
   font-weight: normal !important;
-  display: block;
 }
