--- a/src/Componentes/Styles/root.css
+++ b/src/Componentes/Styles/root.css
@@ -1,27 +1,45 @@
 :root {
   --primary-color: #141828;
+  --secondary-color:#333333 ;
   --button-color: #348632;
+  --button-hover-color: #4bcb4a;
+  --button-disabled:#636363;
   --nav-bg: rgb(37, 37, 37);
-  --shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  --shadow: 0 5px 24px rgba(0, 0, 0, 0.25);
   --font: "Roboto", Arial, sans-serif;
   --font-color: #ffffff;
-  --font-hover: #57b3ff;
+  --font-hover: #183f5f;
+  font-size: 100%;
+  --bg-card:rgb(31, 31, 31);
+  --border: .5px solid black;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
-  font-family: var(--font) !important;
-  font-size: 1.2rem !important;
-  color: var(--font-color) !important;
-  line-height: 20px;
+  margin: 0;
+  padding: 0;
+  font-family: var(--font);
+  color: var(--font-color);
   background-color: var(--primary-color);
+  display: flex !important;
+  flex-direction: column;
+  flex-wrap: wrap !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex: auto;
+  border: 0;
+  width: 100%;
+  height: 100%;
 }
 
-a {
+
+
+a:link, a:visited {
   font-family: var(--font);
   font-size: 1.2rem;
   color: var(--font-color);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
 
 a:hover {
@@ -29,15 +47,14 @@ a:hover {
 }
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 0;
+  width: 100% ;
+  height: 100%;
+  position: relative;
+}
+
+img{
   width: 100%;
   height: 50%;
-  position: relative;
-  
 }
 
 nav {
@@ -65,21 +82,117 @@ button {
   align-items: center;
   padding: 0.8rem 1.4rem;
   text-transform: uppercase;
+  text-shadow: var(--shadow);
   font-size: 1.2rem;
   font-family: var(--font);
   font-weight: normal;
   color: var(--font-color);
+  width: 100%;
+  height: 100%;
 }
 
 button:hover {
-  background-color: #4bcb4a !important;
-  border: 1px solid black !important;
+  background-color: var(--button-hover-color);
+  border: 1px solid black ;
+}
+
+button:disabled{
+  background-color: var(--button-disabled);
+  opacity: 20%;
 }
 
 p {
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  color:var(--font-color);
+  font-size: 1rem;
+  font-family: var(--font);
+  text-shadow: var(--shadow);
+}
+
+h1{
+    font-size: 2rem ;
+    padding: .3rem 2rem ;
+    text-transform: uppercase ;
+    font-family: var(--font) ;
+    font-weight: normal ; 
+    color: var(--font-color) ;
+    text-align: center ;
+    text-shadow: var(--shadow);
+}
+
+h2{
+    font-size: 1.5rem ;
+    padding: .3rem 2rem ;
+    text-transform: uppercase ;
+    font-family: var(--font) ;
+    font-weight: normal ; 
+    color: var(--font-color) ;
+    text-align: center ;
+    text-shadow: var(--shadow);
+}
+
+
+label{
+    font-weight: bold;
+    display: flex;
+    color: white;
+    margin-bottom: 5px;
+}
+
+input[type='text'],
+input[type='email'],
+textarea {
+  display: block;
+  width: 400px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.error{
+  color: red;
+  font-size: 12px;
+  width: 400px;
+  margin-top: 0.25rem;
+}
+
+.MuiCard-root{
+  display: flex;
+  flex-direction: row;
+  position: relative !important;
+  flex-wrap: nowrap !important;
+  justify-content: center !important; 
+  align-items: center;
+  align-content: center;
+  flex : auto;
+  box-shadow: var(--shadow) !important;
+  background-color: var(--bg-card) !important;
+  margin: 2rem auto !important;
+  width: fit-content !important;
+  padding: 1rem !important;
+  border: var(--border);
+}
+
+.MuiPaper-root{
+  width: 75%;
+  align-content: center;
+  background-color: var(--secondary-color) !important;
+  border: var(--border)
+}
+
+.MuiAccordion-root{
+  margin: auto !important;
+  display: flex ;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-wrap: wrap !important;
+  width: 60%;
+  height: 100%;
+  box-shadow: var(--shadow) !important;
+  border: .5px solid black !important;
 }
